# Loops

./: CONTRIBUTING.md  LICENSE  LOOP_AUTHORING_SPEC.md  README.md  pyproject.toml
loops/adcreative/: README.md  __init__.py  __main__.py  loop.py  provider.py  verifier.py
loops/bugfix/: README.md  __init__.py  github.py  loop.py  verifier.py
loops/bugfix/demo_project/: issues.json
loops/bugfix/demo_project/buggy_lib/: __init__.py  pricing.py  text.py
loops/bugfix/demo_project/tests/: test_pricing_regression.py  test_pricing_repro.py  test_text_regression.py  test_text_repro.py
loops/etl/: README.md  __init__.py  loop.py  verifier.py
loops/etl/demo/: reference.csv  spec.py
loops/etl/demo/inputs/: sales_messy.csv
loops/finmodel/: README.md  loop.py  model_spec.py  verifier.py
loops/flaky/: README.md  __init__.py  loop.py  verifier.py
loops/flaky/demo/: __init__.py  flaky_report.json  test_flaky_demo.py
loops/leads/: README.md  __init__.py  dns_fixtures.json  icp_rules.json  leads.csv  loop.py  verifier.py
loops/migrate/: README.md  __init__.py  loop.py  verifier.py
loops/migrate/sample_repo/: conftest.py
loops/migrate/sample_repo/sample_pkg/: __init__.py  currency.py  helpers.py  reporting.py
loops/migrate/sample_repo/tests/: test_behavior.py
loops/perf/: README.md  __init__.py  loop.py  targets.py  verifier.py
loops/research/: README.md  __init__.py  __main__.py  loop.py  verifier.py
loops/research/fixtures/: acme_pricing.txt  initech_about.txt  widget_market_report.txt
loops/vuln_scan/: README.md  demo_app.py  loop.py  verifier.py
